Change action menu overflow issues and set z-index inline with SUI

--- a/packages/cascara/src/ui/ActionsMenu/ActionsMenu.module.scss
+++ b/packages/cascara/src/ui/ActionsMenu/ActionsMenu.module.scss
@@ -1,11 +1,5 @@
 .ActionsMenu {
-  // transition: opacity 250ms ease-in-out;
-  // opacity: 0;
-  // transform-origin: top center;
-
-  // &:global([data-enter]) {
-  //   opacity: 1;
-  // }
+  z-index: 11;
 
   &:global(.ui.dropdown) :global(.menu) {
     .ActionsMenuItem,
